sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:16: error: not found: value begin
    for (i <- fin to begin by -1) {
                     ^